# agent-python-kb

./: .gitignore  payment_agent.py
app-shell/: AGENTS.md  pyproject.toml
app-shell/app/: .env.dev.example  main.py
app-shell/app/agents/: orchestrator.py  sample_agent.py
app-shell/app/config/: di_container.py  settings.py
app-shell/tests/: test_sample_agent.py
